fix - overlapping tags

--- a/css/card.css
+++ b/css/card.css
@@ -82,7 +82,6 @@
   left: 0;
   bottom: -88px;
   padding: 2vh;
-  width: 100%;
   z-index: 2;
   transition: 0.5s;
 }
@@ -121,6 +120,9 @@
 
 .card .details .tags {
   margin-bottom: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px;
 }
 
 .card .details .tags span {
@@ -153,7 +155,8 @@
   color: white;
   background-color: var(--color-secondary-brightest);
   border: none;
-  padding: 2px 8px;
+  padding: 8px 16px;
+  border-radius: 4px;
   font-weight: 600;
   cursor: pointer;
   opacity: 0;
